<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="?attr/selectableItemBackground"
    android:id="@+id/llMain">


    <ImageView
        android:id="@+id/ivMusicIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/music"
        android:contentDescription="@string/music_icon" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/music_title"
        android:textSize="16sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@android:color/black" />


    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_more_vert_24"
        android:contentDescription="@string/more_options"
        android:padding="8dp" />
</LinearLayout>
